cabal-version: 2.4
name:          DNE
version:       0.1.0.0
author:        Simon Charlow
maintainer:    Simon.Charlow@gmail.com

executable DNE
  main-is:            Main.hs
  other-modules:
    Common
    DPL

  build-depends:
    , base           ^>=4.16.4.0
    , containers
    , pretty-simple

  default-extensions:
    BangPatterns
    BlockArguments
    DeriveFunctor
    FlexibleInstances
    ImportQualifiedPost
    InstanceSigs
    TupleSections
    TypeApplications

  hs-source-dirs:     .
  default-language:   Haskell2010
